# de-zoomcamp-2026

./: .gitignore  README.md
de-zoomcamp-2026/01-docker-terraform/: README.md
de-zoomcamp-2026/01-docker-terraform/pipeline/: ingest_data.py  pyproject.toml
de-zoomcamp-2026/02-workflow-orchestration/: README.md  docker-compose.yaml
de-zoomcamp-2026/02-workflow-orchestration/flows/: 01_gcp_kv.yaml  02_gcp_setup.yaml  03_gcp_taxi.yaml  04_flow_orchestrator.yaml
de-zoomcamp-2026/03-data-warehouse/: README.md  homework.md
de-zoomcamp-2026/04-analytics-engineering/: README.md  load_fhv_ny_taxi_data.py
de-zoomcamp-2026/04-analytics-engineering/models/staging/: sources.yml  stg_fhv_tripdata.sql
de-zoomcamp-2026/05-data-platforms/: .bruin.yml  README.md
de-zoomcamp-2026/05-data-platforms/my-taxi-pipeline/assets/ingestion/: trips.py
de-zoomcamp-2026/06-batch/: 06-batch.ipynb  README.md  pyproject.toml
de-zoomcamp-2026/07-streaming/: README.md
de-zoomcamp-2026/07-streaming/workshop/job/: five_min_aggregation_job.py  hourly_tips_job.py  pass_through_job.py  session_window_job.py
de-zoomcamp-2026/07-streaming/workshop/producers/: producer.py
de-zoomcamp-2026/workshop-dlt/: README.md  pyproject.toml
de-zoomcamp-2026/workshop-dlt/taxi-pipeline/: taxi_pipeline.py
