[project]
name = "nyc-taxi-pipeline"
version = "0.1.0"
description = "A dlt pipeline to ingest NYC taxi data from a REST API into DuckDB for the Data Engineering Zoomcamp 2026."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "dlt[workspace]>=1.21.0",
    "ibis-framework[duckdb]>=12.0.0",
    "jupyterlab>=4.5.4",
    "marimo>=0.19.9",
]
